[gd_scene load_steps=4 format=3 uid="uid://c4rk2y5asomyq"]

[ext_resource type="Script" path="res://game/piece.gd" id="1_828he"]
[ext_resource type="Texture2D" uid="uid://bk0q7jfmhyqda" path="res://assets/images/empty_piece.png" id="2_vgdi7"]
[ext_resource type="Texture2D" uid="uid://ca8fug6o1psej" path="res://assets/images/empty_hover.png" id="3_g6hkv"]

[node name="Piece" type="MarginContainer"]
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_828he")

[node name="background" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_vgdi7")

[node name="Marker" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_g6hkv")

[node name="WinMarker" type="TextureRect" parent="."]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
